# process-extras

./: .ghci  .gitignore  .travis.yml  README.md  Tests.hs  changelog  process-extras.cabal
.github/workflows/: haskell-ci.yml
src/: Utils.hs
src/System/Process/: ByteString.hs  Chars.hs  Common.hs  ListLike.hs  Run.hs  Text.hs
src/System/Process/ByteString/: Lazy.hs
src/System/Process/Text/: Builder.hs  Lazy.hs
