Name:               process-extras
Version:            0.7.4
Synopsis:           Process extras
Description:        Extends <http://hackage.haskell.org/package/process>.
                    Read process input and output as ByteStrings or
                    Text, or write your own ProcessOutput instance.
                    Lazy process input and output.  ProcessMaker class
                    for more flexibility in the process creation API.
Homepage:           https://github.com/seereason/process-extras
License:            MIT
License-file:       LICENSE
Author:             David Lazar, Bas van Dijk, David Fox
Maintainer:         David Fox <dsf@seereason.com>
Category:           System
Build-type:         Simple
Cabal-version:      >=1.10
Extra-source-files:
  README.md
  changelog


tested-with:
  GHC == 9.10.1
  GHC == 9.8.2
  GHC == 9.6.6
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

source-repository head
  Type:             git
  Location:         https://github.com/seereason/process-extras

Library
  Default-Language: Haskell2010
  ghc-options:      -Wall

  Hs-source-dirs:   src

  Exposed-modules:
    System.Process.ByteString
    System.Process.ByteString.Lazy
    System.Process.Chars
    System.Process.Common
    System.Process.ListLike
    System.Process.Run
    System.Process.Text
    System.Process.Text.Lazy
    System.Process.Text.Builder

  Other-modules:
    Utils

  Build-depends:
    base >= 4.5 && < 5,
    data-default,
    ListLike >= 4.4,
    mtl,
    process,
    bytestring >= 0.10.0.0,
    text,
    deepseq >= 1.1,
    generic-deriving >= 1.10

Test-Suite process-extras-tests
  Default-Language: Haskell2010
  type: exitcode-stdio-1.0
  Hs-Source-Dirs: .
  Main-Is: Tests.hs
  Build-Depends: base, HUnit, process-extras
